fixed img border not appearing on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,8 @@ button:focus {
 }
 .about-section-box .img-fluid {
   box-shadow: -10px -10px 0px #6d466bff;
-  border: 1px solid #b49fccff;
 }
+
 .inner-column {
 }
 .inner-column h1 {
